попытка сделать латех док

--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -4,11 +4,6 @@
   Алексей Недоря
 }
 
-\usepackage[russian, english]{babel}
-
-\babelfont{rm}{Droid Serif}
-\babelfont{sf}{Droid Sans}
-
 \def\reportDate{05.02.2023}
 
 \title{Язык программирования \thelang{}}
@@ -16,10 +11,13 @@
 \begin{document}
 
 \maketitle
+%\bookmark[view={FitV},dest=bookmark_208.1,level=0]{Cover Sheet}
+%\includepdf[pages=-,scale=.95,link=true,linkname=bookmark_208,linkfit=FitV 0,pagecommand={}]{example-image-a}
 
 \include{toc}
 
-\include{1-вступление}
+\include{1-назначение}
+\include{2-обзор}
 
 \printindex
 
