--- a/doc/report/trivilreport.cls
+++ b/doc/report/trivilreport.cls
@@ -1,83 +1,46 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{trivilreport}[2023/01/16 Trivil language report class]
+\ProvidesClass{trivilreport}[ Trivil language report class]
 
 \LoadClass[a4paper]{article}
 
+\RequirePackage{xltxtra}
+\RequirePackage{etoolbox}
+
+\RequirePackage{polyglossia}
+\setmainlanguage{russian}
+\setotherlanguage{english}
+\setkeys{russian}{babelshorthands=true}
+
+\setmainfont{Times New Roman}
+\setromanfont{Times New Roman} 
+\setsansfont{Arial} 
+\setmonofont{Courier New} 
+
+\newfontfamily{\cyrillicfont}{Times New Roman} 
+\newfontfamily{\cyrillicfontrm}{Times New Roman}
+\newfontfamily{\cyrillicfonttt}{Courier New}
+\newfontfamily{\cyrillicfontsf}{Arial}
+
+\addto\captionsrussian{%
+  \renewcommand{\figurename}{Рис.}%
+  \renewcommand{\tablename}{Табл.}%
+}
+
 %
-% Commands for language and author 
+% Commands for language name and company name
 %
 \newcommand{\thelang}{Тривиль}
 \newcommand{\theauthor}{Алексей Недоря}
 
-\RequirePackage[hyphens]{url}
+%=============
 
-\RequirePackage{amsmath}
-\RequirePackage{amssymb}
-\RequirePackage{lmodern}
 \RequirePackage{iftex}
 
-\RequirePackage{unicode-math}
-\defaultfontfeatures{Scale=MatchLowercase}
-\defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
-
-% Use upquote if available, for straight quotes in verbatim environment
-\IfFileExists{upquote.sty}{
-  \RequirePackage{upquote}
-}{}
-
-\IfFileExists{microtype.sty}{
-  \RequirePackage[]{microtype}
-  \UseMicrotypeSet[protrusion]{basicmath}
-}{}
-             
-\makeatletter
-\@ifundefined{KOMAClassName}{% if non-KOMA class
-  \IfFileExists{parskip.sty}{%
-    \RequirePackage{parskip}
-  }{% else
-    \setlength{\parindent}{0pt}
-    \setlength{\parskip}{6pt plus 2pt minus 1pt}}
-}{% if KOMA class
-  \KOMAoptions{parskip=half}}
-\makeatother
+%\RequirePackage{unicode-math}
+%\defaultfontfeatures{Scale=MatchLowercase}
+%\defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
 
 \RequirePackage{xcolor}
-\RequirePackage{longtable}
-\RequirePackage{booktabs}
-\RequirePackage{array}
-
-% For calculating minipage widths
-\RequirePackage{calc} 
-
-% Correct order of tables after \paragraph or \subparagraph
-\RequirePackage{etoolbox}
-
-\makeatletter
-\patchcmd\longtable{\par}{\if@noskipsec\mbox{}\fi\par}{}{}
-\makeatother
-
-% Allow footnotes in longtable head/foot
-\IfFileExists{footnotehyper.sty}{
-  \RequirePackage{footnotehyper}
-}{
-  \RequirePackage{footnote}
-}
-
-\makesavenoteenv{longtable}
-
-\RequirePackage[normalem]{ulem}
-\setlength{\emergencystretch}{3em} % prevent overfull lines
-
-\IfFileExists{bookmark.sty}{
-  \RequirePackage[numbered]{bookmark}
-}{
-}
-
-% Add URL line breaks if available
-\IfFileExists{xurl.sty}{
-  \RequirePackage{xurl}
-}{}
-\urlstyle{same} % disable monospaced font for URLs
 
 % Index commands
 \RequirePackage{imakeidx}
@@ -85,11 +48,19 @@
 
 \RequirePackage{authblk}
 
-% Listings of grammar and source code
 \RequirePackage{listings}
 
+% Highlights
+\RequirePackage{soul}
+\newcommand{\needlink}{\sethlcolor{yellow}\hl{link}}
+
+\RequirePackage{hyperref}
+\RequirePackage[numbered]{bookmark}
+
+% Listings of grammar and source code
+
 \lstset{% All listings settings
-%  backgroundcolor=\color{gray!15},
+  backgroundcolor=\color{gray!15},
   numbers=left,
   numberstyle=\tiny,
   stepnumber=1,
@@ -98,7 +69,7 @@
 
 % Grammar block style
 \lstdefinestyle{thegrammar}{
-  basicstyle=\small\ttfamily\color{blue!50},
+  basicstyle=\small\ttfamily\color{blue!90}, %50
   breaklines=true,
   moredelim=[s][\color{green!50!black}\ttfamily]{'}{'},
   moredelim=*[s][\color{black}\ttfamily]{options}{\}},
@@ -117,66 +88,11 @@
   \lstset{style=thegrammar}
 }{}
 
-% Internal links
-\RequirePackage{xparse}
 
-\hypersetup{
-  pdftitle={Язык программирования \thelang{}},
-  hidelinks,
-  pdfcreator={\theauthor},
-  pdfauthor={\theauthor},
-  pdfsubject={Описания языка программирования \thelang{} },
-  pdfkeywords={\theauthor{}, \thelang{}, описание языка программирования}
-}
-
-\makeatletter
-
-% hyperref should be last import
-\RequirePackage{hyperref}
-
-% Specification commands
-
-% TODO Change name, add star version
-%\newcommand{\See}[1]{\textit{see} \S\ref{#1}\seechecknextarg}
-\newcommand{\See}[1]{\S\ref{#1}\seechecknextarg}
-\newcommand{\seechecknextarg}{\@ifnextchar\bgroup{\seegobblenextarg}{}}
-\newcommand{\seegobblenextarg}[1]{\@ifnextchar\bgroup{, \S\ref{#1}\seegobblenextarg}{ \textit{and} \S\ref{#1}}}
-
-\newcommand{\Seename}[1]{
-  \see ``\nameref{#1}''\seenamechecknextarg}
-\newcommand{\seenamechecknextarg}{\@ifnextchar\bgroup{\seenamegobblenextarg}{}}
-\newcommand{\seenamegobblenextarg}[1]{\@ifnextchar\bgroup{, ``\nameref{#1}''\seenamegobblenextarg}{ and ``\nameref{#1}''}}
-
-\makeatother
-
-\newcommand{\code}[1]{\texttt{#1}}
-
-\NewDocumentCommand \definition { s m }{
-  \IfBooleanTF{#1}
-              {\index{#2|hyperpage}\emph{#2}}
-              {\index{\lowercase{#2}|hyperpage}\emph{#2}}
-}
-
-\NewDocumentCommand \mention { s m }{
-  \IfBooleanTF{#1}
-              {\index{#2|hyperpage}#2}
-              {\index{\lowercase{#2}|hyperpage}#2}
-}
-
-% Highlights
-\RequirePackage{soul}
-\newcommand{\notsolved}[1]{\sethlcolor{magenta}\hl{#1}}
-\newcommand{\needlink}[1]{\sethlcolor{yellow}\hl{#1}}
-\newcommand{\notwritten}[1]{{\color{white}\sethlcolor{gray}\hl{#1}}}
-\newcommand{\tobediscussed}[1]{\sethlcolor{cyan}\hl{#1}}
-\newcommand{\tobedeleted}[1]{\sethlcolor{orange}\hl{#1}}
-
-% Source highlight
-
-
+%==========
 \lstdefinelanguage{sts}{
   sensitive = true,
-  keywords={abstract,as,assert,await,break,case,
+  keywords={abstract,модуль,
     class,const,constructor,continue,defer,do,
             else,enum,export,false,for,function,if,import,inner,instanceof,
             interface,launch,let,native,new,null,open,override,package,private,protected,
@@ -222,3 +138,16 @@
 \lstnewenvironment{console-output}{
   \lstset{style=theconsole}
 }{}
+
+
+%==================
+
+\hypersetup{
+  pdftitle={\thelang{} Language Report},
+  hidelinks,
+  pdfcreator={\theauthor},
+  pdfauthor={\theauthor},
+  pdfsubject={\thelang{} language report},
+  pdfkeywords={\theauthor{}, \thelang{}, language report}
+}
+
