--- a/doc/report/1-назначение.tex
+++ b/doc/report/1-назначение.tex
@@ -1,5 +1,5 @@
-\hypertarget{назначение}{
-\section{Назначение}\label{наз:назначение}}
+\hypertarget{target}{
+\section{Назначение}\label{target:chapter}}
 %\hypertarget{expressions}{%
 %\section{Expressions}\label{expressions}}
 
