--- a/doc/report/trivilreport.cls
+++ b/doc/report/trivilreport.cls
@@ -34,7 +34,7 @@
 
 %=============
 
-\RequirePackage{iftex}
+%\RequirePackage{iftex}
 
 %\RequirePackage{unicode-math}
 %\defaultfontfeatures{Scale=MatchLowercase}
@@ -46,9 +46,19 @@
 \RequirePackage{imakeidx}
 \makeindex[columns=3, title=Alphabetical Index, intoc]
 
-\RequirePackage{authblk}
+%\RequirePackage{authblk}
 
-\RequirePackage{listings}
+\RequirePackage{fancyvrb}
+\renewcommand{\theFancyVerbLine}{%
+{\footnotesize\arabic{FancyVerbLine}}}
+
+\DefineVerbatimEnvironment%
+{Trivil}{Verbatim}
+{frame=single,numbers=left}
+
+\DefineVerbatimEnvironment%
+{Grammar}{Verbatim}
+{frame=lines,formatcom=\color{blue},rulecolor=\color{black}}
 
 % Highlights
 \RequirePackage{soul}
@@ -56,90 +66,6 @@
 
 \RequirePackage{hyperref}
 \RequirePackage[numbered]{bookmark}
-
-% Listings of grammar and source code
-
-\lstset{% All listings settings
-  backgroundcolor=\color{gray!15},
-  numbers=left,
-  numberstyle=\tiny,
-  stepnumber=1,
-  numbersep=5pt
-}
-
-% Grammar block style
-\lstdefinestyle{thegrammar}{
-  basicstyle=\small\ttfamily\color{blue!90}, %50
-  breaklines=true,
-  moredelim=[s][\color{green!50!black}\ttfamily]{'}{'},
-  moredelim=*[s][\color{black}\ttfamily]{options}{\}},
-  commentstyle={\color{gray}\itshape},
-  morecomment=[l]{//},
-  emph={%
-    STRING,
-  },
-  emphstyle={\color{blue}\ttfamily},
-  alsoletter={:,|,;},
-  morekeywords={:,|,;},
-  keywordstyle={\color{black}},
-}
-
-\lstnewenvironment{grammar}{
-  \lstset{style=thegrammar}
-}{}
-
-
-%==========
-\lstdefinelanguage{sts}{
-  sensitive = true,
-  extendedchars=\true,
-  keywords={abstract,модуль,
-    class,const,constructor,continue,defer,do,
-            else,enum,export,false,for,function,if,import,inner,instanceof,
-            interface,launch,let,native,new,null,open,override,package,private,protected,
-            public,return,static,switch,super,this,throw,true,try,type,while}
-  otherkeywords={% Operators
-    +,-,*,/,\%,&,|,^,\<\<,\>\>,+=,-=,*=,/=,\%=,&=,|=,^=,
-    \<\<=,\>\>=,\>\>\>=,\&\&,||,++,--,==,<,>,==,==,!,??,
-    ?.,!=,<=,>=,...,\(,\[,\{,\,,\.,\),\],\},;,:
-  },
-  basicstyle=\ttfamily\small,
-  keywords = [2]{пусто,catch,default,extends,from,implements,in,of,out,recover,rethrows,throws},
-  keywordstyle=\color{blue},
-  keywordstyle=[2]\color{blue},% for example
-  numbers=left,
-  numberstyle=\scriptsize,
-  stepnumber=1,
-  numbersep=8pt,
-  showstringspaces=false,
-  breaklines=true,
-  frame={single},
-  comment=[l]{//},
-  morecomment=[s]{/*}{*/},
-  commentstyle=\color{purple}\ttfamily,
-  stringstyle=\color{red}\ttfamily,
-  morestring=[b]',
-  morestring=[b]"
-}
-
-\lstnewenvironment{source}{
-  \lstset{language=sts}
-}{}
-
-% Grammar block style
-\lstdefinestyle{theconsole}{
-  basicstyle=\ttfamily\color{black!70},
-  stepnumber=1,
-  numbersep=8pt,
-  showspaces=true,
-  breaklines=true,
-  frame={single},
-}
-
-\lstnewenvironment{console-output}{
-  \lstset{style=theconsole}
-}{}
-
 
 %==================
 
