--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -4,7 +4,7 @@
   Алексей Недоря
 }
 
-\def\reportDate{05.02.2023}
+\def\reportDate{12.02.2023}
 
 \title{Язык программирования \thelang{}}
 \date{\reportDate}
@@ -18,6 +18,7 @@
 
 \include{1-назначение}
 \include{2-обзор}
+\include{3-лексика}
 
 \printindex
 
