--- a/doc/report/2-обзор.tex
+++ b/doc/report/2-обзор.tex
@@ -1,19 +1,11 @@
 \hypertarget{review}{%
 \section{Обзор языка}\label{review:chapter}}
 
+\thelang{} - это модульный язык с явным экспортом и импортом, автоматическим управлением памятью (сборка мусора), с поддержкой ООП.
 
-Вводный текст
+Программа на языке \thelang{} состоит из модулей (единиц компиляции), исходный текст каждого модуля расположен в одном или нескольких исходных файлов.
 
-\begin{Verbatim}[frame=single,numbers=left]
-модуль x
-
-импорт "стд/вывод"
-
-вход { 
-    вывод.ф("Привет!\\n")
-}
-\end{Verbatim}
-
+Пример программы:
 \begin{Trivil}
 модуль x
 
@@ -24,10 +16,10 @@
 }
 \end{Trivil}
 
+Для описания языка используется EBNF в формате ANTLR4 \needlink{}.
+
 \begin{Grammar}
-letter
-    : unicode_letter
-    | '_'
-    | '№'
+Программа
+    : Модуль+
     ;
 \end{Grammar}
