--- a/doc/report/3-лексика.tex
+++ b/doc/report/3-лексика.tex
@@ -1,13 +1,43 @@
 \hypertarget{lexica}{%
 \section{Лексика}\label{lex:chapter}}
 
+Исходный текст есть последовательность лексем: идентификаторов и ключевых слов, литералов, знаков операций, разделителей и комментариев. Каждая лексема состоит из последовательности Unicode символов (unicode code point) в кодировке UTF-8.
 
-Вводный текст
+
+\hypertarget{idents}{%
+\section{Идентификаторы}\label{lex:idents}}
+
+Идентификатор - это последовательность \emph{слов}, разделенных пробелами или символами дефис '-' с опционально завершающим знаком препинания:
+
+Каждое слово состоит из \emph{Букв} и цифр, и начинается с Буквы. Буквой считается любой Unicode символ, имеющий признак 'Letter', и дополнительно символы '№'
+и '\_'. 
 
 \begin{Grammar}
-letter
-    : unicode_letter
-    | '_'
-    | '№'
+Идентификатор
+	: Слово ((' ' | '-') Слово)* Знак-препинания?
+	;
+Слово
+	: Буква (Буква | Цифра)*
+	;
+Буква
+	: Unicode-letter
+	| '_'
+	| '№'
+	;
+Знак-препинания
+	: '?' 
+	| '!' 
+	;
+Цифра
+    : '0' .. '9'
     ;
 \end{Grammar}
+
+Примеры идентификаторов:
+\begin{Trivil}
+буква
+буква-или-цифра
+№-символа
+Цифра?
+Пора паниковать!
+\end{Trivil}
