--- a/doc/report/3-лексика.tex
+++ b/doc/report/3-лексика.tex
@@ -1,15 +1,77 @@
 \hypertarget{lexica}{%
 \section{Лексика}\label{lex:chapter}}
 
-Исходный текст есть последовательность лексем: идентификаторов и ключевых слов, литералов, знаков операций, разделителей и комментариев. Каждая лексема состоит из последовательности Unicode символов (unicode code point) в кодировке UTF-8.
+Исходный текст есть последовательность лексем: идентификаторов, ключевых слов, литералов, знаков операций и пунктуации. 
+Каждая лексема состоит из последовательности Unicode символов (unicode code point) в кодировке UTF-8.
 
+Пробелы (U+0020), символы табуляции (U+0009) и символы завершения строки (U+000D, U+000A) разделяют лексемы, и, игнорируются, кроме следующих случаев:
+\begin{itemize}
+\item
+Символы завершения строк могут использоваться как разделители синтаксических конструкций (\See{lex:separators}).
+\item
+  Пробелы являются значащими символами в идентификаторах, состоящих из нескольких слов (\See{lex:idents}). 
+\end{itemize}
+
+Несколько таких разделителей трактуются, как один.
+
+Исходный текст может содержать \emph{комментарии}.
+
+\hypertarget{comments}{%
+\subsection{Комментарии}\label{lex:comments}}
+
+Есть две формы комментариев:
+\begin{itemize}
+\item
+Строчный комментарий начинаeтся с последовательности символов '//' и заканчиваeтся в конце строки.
+\item
+Блочный комментарий начинается с последовательности символов '/*' и заканчивается последовательностью символов '*/'. 
+Блочные комментарии могут быть вложенные.
+\end{itemize}
+
+\begin{Grammar}
+Комментарий: 
+	: '//' (любой символ, кроме завершения строки)*
+    | '/*'  ( любой символ)* '*/
+	;
+\end{Grammar}
+
+\hypertarget{separators}{%
+\subsection{Разделители синтаксических конструкций}\label{lex:separators}}
+
+Некоторые синтаксические правила используют нетерминал \emph{Разделитель} для разделения двух подряд идущих синтаксических конструкций, например:
+\begin{Grammar}
+Список-операторов
+	: Оператор (Разделитель Оператор)* 
+	;
+\end{Grammar}
+
+В качестве разделителя может использоваться символ ';' или символ завершения строки.
+\begin{Grammar}
+Разделитель
+	: ';'
+	| символ-завершения-строки
+	;	
+\end{Grammar}
+
+Пример:
+\begin{Trivil}
+а := 1; б := 2
+в := 1 
+\end{Trivil}
+
+В строке 1 операторы разделены символом ';', а оператор в строке 2 отделен от операторов строки 1 символом завершения строки.
+
+Ошибка компиляции - нет разделителя:
+\begin{SampleErr}
+а := 1 б := 2
+\end{SampleErr}
 
 \hypertarget{idents}{%
-\section{Идентификаторы}\label{lex:idents}}
+\subsection{Идентификаторы}\label{lex:idents}}
 
 Идентификатор - это последовательность \emph{слов}, разделенных пробелами или символами дефис '-' с опционально завершающим знаком препинания:
 
-Каждое слово состоит из \emph{Букв} и цифр, и начинается с Буквы. Буквой считается любой Unicode символ, имеющий признак 'Letter', и дополнительно символы '№'
+Каждое слово состоит из \emph{Букв} и цифр, и начинается с Буквы. Буквой считается любой Unicode символ, имеющий признак \emph{Letter}, и, дополнительно, символы '№'
 и '\_'. 
 
 \begin{Grammar}
