--- a/doc/report/3-лексика.tex
+++ b/doc/report/3-лексика.tex
@@ -1,7 +1,7 @@
 \hypertarget{lexica}{%
 \section{Лексика}\label{lex:chapter}}
 
-Исходный текст есть последовательность лексем: идентификаторов, ключевых слов, литералов, знаков операций и пунктуации. 
+Исходный текст есть последовательность лексем: идентификаторов, ключевых слов, литералов, знаков операций и знаков препинания. 
 Каждая лексема состоит из последовательности Unicode символов (unicode code point) в кодировке UTF-8.
 
 Пробелы (U+0020), символы табуляции (U+0009) и символы завершения строки (U+000D, U+000A) разделяют лексемы, и, игнорируются, кроме следующих случаев:
@@ -10,6 +10,8 @@
 Символы завершения строк могут использоваться как разделители синтаксических конструкций (\See{lex:separators}).
 \item
   Пробелы являются значащими символами в идентификаторах, состоящих из нескольких слов (\See{lex:idents}). 
+\item
+  Пробелы являются значащими в строковых и символьных литералах (\See{lex:idents}). 
 \end{itemize}
 
 Несколько таких разделителей трактуются, как один.
@@ -30,9 +32,9 @@
 
 \begin{Grammar}
 Комментарий: 
-	: '//' (любой символ, кроме завершения строки)*
+    : '//' (любой символ, кроме завершения строки)*
     | '/*'  ( любой символ)* '*/
-	;
+    ;
 \end{Grammar}
 
 \hypertarget{separators}{%
@@ -41,16 +43,16 @@
 Некоторые синтаксические правила используют нетерминал \emph{Разделитель} для разделения двух подряд идущих синтаксических конструкций, например:
 \begin{Grammar}
 Список-операторов
-	: Оператор (Разделитель Оператор)* 
-	;
+    : Оператор (Разделитель Оператор)* 
+    ;
 \end{Grammar}
 
 В качестве разделителя может использоваться символ ';' или символ завершения строки.
 \begin{Grammar}
 Разделитель
-	: ';'
-	| символ-завершения-строки
-	;	
+    : ';'
+    | символ-завершения-строки
+    ;   
 \end{Grammar}
 
 Пример:
@@ -76,20 +78,20 @@
 
 \begin{Grammar}
 Идентификатор
-	: Слово ((' ' | '-') Слово)* Знак-препинания?
-	;
+    : Слово ((' ' | '-') Слово)* Знак-препинания?
+    ;
 Слово
-	: Буква (Буква | Цифра)*
-	;
+    : Буква (Буква | Цифра)*
+    ;
 Буква
-	: Unicode-letter
-	| '_'
-	| '№'
-	;
+    : Unicode-letter
+    | '_'
+    | '№'
+    ;
 Знак-препинания
-	: '?' 
-	| '!' 
-	;
+    : '?' 
+    | '!' 
+    ;
 Цифра
     : '0' .. '9'
     ;
@@ -103,3 +105,92 @@
 Цифра?
 Пора паниковать!
 \end{Trivil}
+
+\hypertarget{keywords}{%
+\subsection{Ключевые слова}\label{lex:keywords}}
+
+Следующие ключевые слова зарезервированы и не могут быть использованы, как идентификаторы:
+
+\begin{tabular}[c]{*{5}{p{2cm}}}
+авария &    есть &          когда &     надо &              прервать \\
+вернуть &  иначе &        конст &     осторожно &    пусть \\
+вход &       импорт &      мб &         пока &              тип \\
+если &       класс &         модуль &  позже &            фн 
+\end{tabular}
+
+
+\hypertarget{operators}{%
+\subsection{Знаки операций и знаки препинания}\label{lex:operators}}
+
+Следующие последовательности символов представляют знаки операций и знаки препинания:
+% добавить bitop
+\begin{Verbatim}
++   -   *   /   %
+&   |   ~
+=   #   <   <=  >   >=
+:=  ++  --
+(   )   [   ]   {   }
+(:  .   ^   ,   :   ;   
+\end{Verbatim}
+
+\hypertarget{intlit}{%
+\subsection{Целочисленные литералы}\label{lex:intlit}}
+
+\begin{Grammar}
+Целочисленный-литерал
+    : Цифра+
+    | '0x' Цифра16+
+    ;
+
+Цифра16
+    : '0'..'9'
+    | 'a'..'f'
+    | 'A'..'F'
+    ;
+\end{Grammar}    
+
+\hypertarget{floatlit}{%
+\subsection{Вещественные литералы}\label{lex:floatlit}}
+
+В текущей реализации есть только одна форма записи вещественных литералов, без экспоненты.
+
+\begin{Grammar}
+Вещественный-литерал
+    : Цифра+ '.' Цифра*
+    ;
+\end{Grammar}      
+
+\hypertarget{strlit}{%
+\subsection{Строковые литералы}\label{lex:strlit}}
+
+Строковый литерал - это последовательность символов, заключенные в двойные кавычки. Строковый литерал может содержать символы, закодированные с помощью escape-последовательности, которая начинается с символа \verb+'\'+.
+
+\begin{Grammar}
+Строковый литерал
+    : '"'
+    (~('"' | '\\' | '\n' | '\r' | '\t') | Escape)* 
+    '"' 
+    ;
+Escape
+    : '\\'
+    ( 'u' Цифра16 Цифра16 Цифра16 Цифра16
+    | 'n' | 'r' | 't' 
+    | '"'
+    | "'"
+    )
+    ;    
+\end{Grammar}  
+
+\hypertarget{symlit}{%
+\subsection{Символьные литералы}\label{lex:symlit}}
+
+Символьный литерал задает значение для Unicode code point, - это последовательность символов, заключенные в двойные кавычки.
+Он записывается как один или несколько символов, заключенных в одинарные кавычки. Символьный литерал может быть закодирован с помощью escape-последовательности, которая начинается с символа \verb+'\'+.
+
+\begin{Grammar}
+Символьный литерал
+    : "'" 
+    ~("'" | '\\' | '\n' | '\r' | '\t') | escape_value)
+    "'"
+    ;
+\end{Grammar}  
