описания и общая структура

--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -19,6 +19,10 @@
 \include{1-назначение}
 \include{2-обзор}
 \include{3-лексика}
+\include{4-описания}
+\include{5-выражения}
+\include{6-операторы}
+\include{7-модули}
 
 \printindex
 
