--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -38,8 +38,35 @@
 \hypertarget{predefined-idents}{%
 \subsection{Предопределенные идентификаторы}\label{decls:predefined-idents}}
 
+Следующие идентификаторы неявно описаны в области действия \emph{Универсум}.
+
+Типы (\See{decls:predefined-types}):
+\begin{Verbatim}
+    Байт Цел64 Слово64 Вещ64 Лог Символ Строка
+\end{Verbatim}
+
+Константы типа Лог (\See{decls:predefined-types}):
+\begin{Verbatim}
+    ложь истина
+\end{Verbatim}
+
+Литерал nullable (\See{}):
+\begin{Verbatim}
+    пусто
+\end{Verbatim}
+
+Стандартные функции (\See{stdfuncs:chapter}):
+\begin{Verbatim}
+    длина тег нечто
+\end{Verbatim}
+
+Кроме того, для векторных типов определен набор встроенных методов (\See{stdfuncs:stdvector}).
+
 \hypertarget{predefined-types}{%
 \subsection{Предопределенные типы}\label{decls:predefined-types}}
+
+
+
 
 \hypertarget{constants}{%
 \subsection{Описание констант}\label{decls:constants}}
