--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -11,8 +11,6 @@
 \begin{document}
 
 \maketitle
-%\bookmark[view={FitV},dest=bookmark_208.1,level=0]{Cover Sheet}
-%\includepdf[pages=-,scale=.95,link=true,linkname=bookmark_208,linkfit=FitV 0,pagecommand={}]{example-image-a}
 
 \include{toc}
 
@@ -22,7 +20,8 @@
 \include{4-описания}
 \include{5-выражения}
 \include{6-операторы}
-\include{7-модули}
+\include{7-стдфунк}
+\include{8-модули}
 
 \printindex
 
