предопределенные типы и остальное

--- a/doc/report/3-лексика.tex
+++ b/doc/report/3-лексика.tex
@@ -122,15 +122,15 @@
 \hypertarget{operators}{%
 \subsection{Знаки операций и знаки препинания}\label{lex:operators}}
 
-Следующие последовательности символов представляют знаки операций и знаки препинания:
+Следующие последовательности символов обозначают знаки операций и знаки препинания:
 % добавить bitop
 \begin{Verbatim}
-+   -   *   /   %
-&   |   ~
-=   #   <   <=  >   >=
-:=  ++  --
-(   )   [   ]   {   }
-(:  .   ^   ,   :   ;   
+    +   -   *   /   %
+    &   |   ~
+    =   #   <   <=  >   >=
+    :=  ++  --
+    (   )   [   ]   {   }
+    (:  .   ^   ,   :   ;   
 \end{Verbatim}
 
 \hypertarget{intlit}{%
