--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -65,8 +65,24 @@
 \hypertarget{predefined-types}{%
 \subsection{Предопределенные типы}\label{decls:predefined-types}}
 
+Следующие типы обозначаются предопределенными идентификаторами, значениями данных типов являются:
 
+\begin{tabular}[c]{l|l}
+\textbf{Тип} & \textbf{Множество значений} \\ \hline
+Байт &  множество целых числа от -128 до 127   \\
+Цел64 & множество всех 64-битных знаковых целых \\
+Слово64 & множество всех 64-битных беззнаковых целых \\ 
+Вещ64 & множество всех 64-разрядных чисел с плавающей запятой стандарта IEEE-754 \\ 
+Лог & константы \verb|ложь| и \verb|истина| \\ 
+Символ & множество всех Unicode символов \\ 
+Строка & множество всех строковых литералов.
+\end{tabular}
 
+\bigskip
+Операции над значениями этих типов определены в ().
+
+\hypertarget{type-ref}{%
+\subsection{Указание типа}\label{decls:type-ref}}
 
 \hypertarget{constants}{%
 \subsection{Описание констант}\label{decls:constants}}
