--- a/doc/report/1-назначение.tex
+++ b/doc/report/1-назначение.tex
@@ -3,7 +3,7 @@
 %\hypertarget{expressions}{%
 %\section{Expressions}\label{expressions}}
 
-Язык программирования \thelang{} разработан в рамках работы на семейством языков программирования "Языки выходного дня"  (ЯВД) \needlink{} проекта Интенсивное программирования \needlink{}.
+Язык программирования \thelang{} разработан в рамках работы на семейством языков программирования \href{http://алексейнедоря.рф/?p=419}{\myref{Языки выходного дня}}  (ЯВД)  проекта \href{http://digital-economy.ru/stati/интенсивное-программирование}{\myref{Интенсивное программирования}}.
 
 \thelang{} является нулевым языком семейства ЯВД, предназначенным для реализации компиляторов и экосистемы других языков семейства. В рамках классификации языков, принятом в проекте Интенсивное программирования, это язык L2.
 
