--- a/doc/report/2-обзор.tex
+++ b/doc/report/2-обзор.tex
@@ -16,10 +16,18 @@
 }
 \end{Trivil}
 
-Для описания языка используется EBNF в формате ANTLR4 \needlink{}.
+Для описания языка используется EBNF в формате, близком к формату ANTLR4. Операции: 
 
-\begin{Grammar}
-Программа
-    : Модуль+
-    ;
+\begin{tabular}[c]{r|l}
+    () & группировка \\
+    X* & повторение 0 и более раз \\
+    X+ & повторение 1 и более раз \\
+    X? & опциональность X (0 или 1 раз) \\
+    X | Y & X или Y \\
+\end{tabular}
+
+\bigskip
+Пример:
+\begin{Grammar}[vspace=0pt]
+Список-операторов: Оператор (Разделитель Оператор)* 
 \end{Grammar}
