--- a/doc/report/3-лексика.tex
+++ b/doc/report/3-лексика.tex
@@ -31,10 +31,9 @@
 \end{itemize}
 
 \begin{Grammar}
-Комментарий: 
+Комментарий
     : '//' (любой символ, кроме завершения строки)*
     | '/*'  ( любой символ)* '*/
-    ;
 \end{Grammar}
 
 \hypertarget{separators}{%
@@ -42,63 +41,47 @@
 
 Некоторые синтаксические правила используют нетерминал \emph{Разделитель} для разделения двух подряд идущих синтаксических конструкций, например:
 \begin{Grammar}
-Список-операторов
-    : Оператор (Разделитель Оператор)* 
-    ;
+Список-операторов: Оператор (Разделитель Оператор)* 
 \end{Grammar}
 
 В качестве разделителя может использоваться символ ';' или символ завершения строки.
 \begin{Grammar}
-Разделитель
-    : ';'
-    | символ-завершения-строки
-    ;   
+Разделитель: ';'  | символ-завершения-строки
 \end{Grammar}
 
+\begin{samepage}
 Пример:
-\begin{Trivil}
+\begin{Trivil}[vspace=2pt]
 а := 1; б := 2
 в := 1 
 \end{Trivil}
+\end{samepage}
 
 В строке 1 операторы разделены символом ';', а оператор в строке 2 отделен от операторов строки 1 символом завершения строки.
 
 Ошибка компиляции - нет разделителя:
-\begin{SampleErr}
+\begin{SampleErr}[vspace=2pt]
 а := 1 б := 2
 \end{SampleErr}
 
 \hypertarget{idents}{%
 \subsection{Идентификаторы}\label{lex:idents}}
 
-Идентификатор - это последовательность \emph{слов}, разделенных пробелами или символами дефис '-' с опционально завершающим знаком препинания:
+Идентификатор - это последовательность \emph{Слов}, разделенных пробелами или символами дефис '-' с опционально завершающим знаком препинания:
 
-Каждое слово состоит из \emph{Букв} и цифр, и начинается с Буквы. Буквой считается любой Unicode символ, имеющий признак \emph{Letter}, и, дополнительно, символы '№'
+Каждое слово состоит из \emph{Букв} и \emph{Цифр}, и начинается с Буквы. Буквой считается любой Unicode символ, имеющий признак \emph{Letter}, и, дополнительно, символы '№'
 и '\_'. 
 
 \begin{Grammar}
-Идентификатор
-    : Слово ((' ' | '-') Слово)* Знак-препинания?
-    ;
-Слово
-    : Буква (Буква | Цифра)*
-    ;
-Буква
-    : Unicode-letter
-    | '_'
-    | '№'
-    ;
-Знак-препинания
-    : '?' 
-    | '!' 
-    ;
-Цифра
-    : '0' .. '9'
-    ;
+Идентификатор: Слово ((' ' | '-') Слово)* Знак-препинания?
+Слово: Буква (Буква | Цифра)*
+Буква: Unicode-letter | '_' | '№'
+Цифра: '0' .. '9'
+Знак-препинания: '?' | '!' 
 \end{Grammar}
 
 Примеры идентификаторов:
-\begin{Trivil}
+\begin{Trivil}[vspace=2pt]
 буква
 буква-или-цифра
 №-символа
@@ -137,16 +120,8 @@
 \subsection{Целочисленные литералы}\label{lex:intlit}}
 
 \begin{Grammar}
-Целочисленный-литерал
-    : Цифра+
-    | '0x' Цифра16+
-    ;
-
-Цифра16
-    : '0'..'9'
-    | 'a'..'f'
-    | 'A'..'F'
-    ;
+Целочисленный-литерал: Цифра+  | '0x' Цифра16+
+Цифра16: '0'..'9' | 'a'..'f' | 'A'..'F'
 \end{Grammar}    
 
 \hypertarget{floatlit}{%
@@ -155,9 +130,7 @@
 В текущей реализации есть только одна форма записи вещественных литералов, без экспоненты.
 
 \begin{Grammar}
-Вещественный-литерал
-    : Цифра+ '.' Цифра*
-    ;
+Вещественный-литерал: Цифра+ '.' Цифра*
 \end{Grammar}      
 
 \hypertarget{strlit}{%
@@ -170,7 +143,6 @@
     : '"'
     (~('"' | '\\' | '\n' | '\r' | '\t') | Escape)* 
     '"' 
-    ;
 Escape
     : '\\'
     ( 'u' Цифра16 Цифра16 Цифра16 Цифра16
@@ -178,7 +150,6 @@ Escape
     | '"'
     | "'"
     )
-    ;    
 \end{Grammar}  
 
 \hypertarget{symlit}{%
@@ -192,5 +163,4 @@ Escape
     : "'" 
     ~("'" | '\\' | '\n' | '\r' | '\t') | escape_value)
     "'"
-    ;
 \end{Grammar}  
