--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -10,7 +10,6 @@
 	| Описание-констант
 	| Описание-переменных
 	| Описание-функций
-	;
 \end{Grammar} 
 
 Описанный идентификатор используется для ссылки на связанный объект, в тех частях программы, которые попадают в \emph{область действия} описания. 
@@ -39,6 +38,7 @@
 \subsection{Предопределенные идентификаторы}\label{decls:predefined-idents}}
 
 Следующие идентификаторы неявно описаны в области действия \emph{Универсум}.
+\bigskip
 
 Типы (\See{decls:predefined-types}):
 \begin{Verbatim}
@@ -69,7 +69,7 @@
 
 \begin{tabular}[c]{l|l}
 \textbf{Тип} & \textbf{Множество значений} \\ \hline
-Байт &  множество целых числа от -128 до 127   \\
+Байт &  множество целых числа от 0 до 255   \\
 Цел64 & множество всех 64-битных знаковых целых \\
 Слово64 & множество всех 64-битных беззнаковых целых \\ 
 Вещ64 & множество всех 64-разрядных чисел с плавающей запятой стандарта IEEE-754 \\ 
@@ -79,7 +79,7 @@
 \end{tabular}
 
 \bigskip
-Операции над значениями этих типов определены в ().
+Операции над значениями этих типов определены в (\See{expr:operators}).
 
 \hypertarget{type-ref}{%
 \subsection{Указание типа}\label{decls:type-ref}}
