--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -1,3 +1,5 @@
 \hypertarget{expressions}{%
 \section{Выражения}\label{expr:chapter}}
 
+\hypertarget{operators}{%
+\subsection{Операции}\label{expr:operators}}
