глава описания - указ типов, константы

--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -2,7 +2,7 @@
 \section{Описания и области действия}\label{decls:chapter}}
 
 Каждый идентификатор, встречающийся в программе, должен быть описан, если только это
-не предопределенный идентификатор (\See{decls:predefined-idents}).
+не предопределенный идентификатор (\See{decls:predefined-idents}). Идентификатор может быть описан как тип, константа, переменная, функция или как поле класса.
 
 \begin{Grammar}
 Описание
@@ -32,7 +32,11 @@
 Областью действия идентификатора, описанного в теле функции (\See{decls:functions}) или теле входа (\See{mods:entry}), является часть \emph{блока} (\See{stmt:blocks}), в котором описан идентификатор, от точки завершения описания и до завершения этого блока. 
 \end{itemize}
 
-Заголовок модуля не является описанием, имя модуля не принадлежит никакой области действия. Его цель - идентифицировать файлы, принадлежащие одному и тому же модулю.
+В описании сразу за идентификатором может следовать признак экспорта '*', указывающий, что идентификатор \emph{экспортирован} и может использоваться в другом модуле, \emph{импортирующем} данный (\See{mods:import}). 
+
+\begin{Grammar}
+Идент-оп:  Идентификатор '*'?
+\end{Grammar} 
 
 \hypertarget{predefined-idents}{%
 \subsection{Предопределенные идентификаторы}\label{decls:predefined-idents}}
@@ -67,6 +71,7 @@
 
 Следующие типы обозначаются предопределенными идентификаторами, значениями данных типов являются:
 
+\smallskip
 \begin{tabular}[c]{l|l}
 \textbf{Тип} & \textbf{Множество значений} \\ \hline
 Байт &  множество целых числа от 0 до 255   \\
@@ -84,14 +89,83 @@
 \hypertarget{type-ref}{%
 \subsection{Указание типа}\label{decls:type-ref}}
 
+\thelang{} является языком со статической типизацией, что означает, что тип любого объекта языка явно или неявно указывается во время описания объекта. 
+Неявное указание типа может быть использовано в описании констант (\See{decls:constants}), переменных (\See{decls:constants}) и полей класса ().
+
+Для явного указании типа используется имя типа, перед которым может стоять ключевое слово \keyword{мб} (\emph{может быть}). 
+
+\begin{Grammar}
+Указ-типа: 'мб'? Квалидент
+Квалидент: Идентификатор ('.' Идентификатор)?
+\end{Grammar} 
+
+Множество значений объекта с типом \keyword{мб} T состоит из значения, обозначенного предопределенным идентификатором  \keyword{пусто} и значений типа Т. 
+Тип такого объекта называется \emph{может быть Т} (\See{decls:mb-types}). В англоязычных языках программирования используется термин \emph{nullable type}.
+
+
 \hypertarget{constants}{%
 \subsection{Описание констант}\label{decls:constants}}
+
+Описание константы связывает идентификатор с постоянным значением. 
+Значение константы может быть задано явно или неявно, в случае группового описания констант.
+
+\begin{Grammar}
+Описание-констант: 'конст' (Константа | Группа-констант)
+Константа: Идент-оп (':' Указ-типа)? '=' Выражение
+\end{Grammar} 
+
+Если тип константы не указан, то он устанавливается равным типу выражения (\See{expr:chapter}).
+Выражение для константы должно вычисляться во время компиляции (\See{expr:const-expr}).
+
+\begin{Trivil}
+конст к1: Цел64 = 1 // тип Цел64
+конст к2: Байт = 2 // тип Байт
+конст к3 = 3 // тип Цел64
+конст к4 = "Привет" // тип Строка
+\end{Trivil}
+
+Групповое описание констант позволяет опускать тип и выражение для всех констант, кроме первой константы в группе и указать признак экспорт для всех констант группы.
+
+\begin{Grammar}
+Группа-констант: 
+    '*'? '(' 
+    Константа (Разделитель След-константа)* 
+    ')'
+След-константа: Идент-оп ((':' Указ-типа)? '=' Выражение)?
+\end{Grammar} 
+
+Пример группового экспорта:
+\begin{Trivil}[vspace=2pt]
+конст *(
+    Счетчик = 1
+    Имя = "Вася"
+)
+\end{Trivil}
+
+Пример неявного задания значения для констант:
+\begin{Trivil}[vspace=2pt]
+конст ( 
+    / / операции
+    ПЛЮС = 1   // тип Цел64, значение = 1
+    МИНУС       // тип Цел64, значение = 2  
+    ОСТАТОК   // тип Цел64, значение = 3 
+    // ключевые слова
+    ЕСЛИ = 21   // тип Цел64, значение = 21
+    ИНАЧЕ        // тип Цел64, значение = 22
+    ПОКА          // тип Цел64, значение = 23
+)
+\end{Trivil}
+
 
 \hypertarget{variables}{%
 \subsection{Описание переменных}\label{decls:variables}}
 
 \hypertarget{types}{%
 \subsection{Описание типов}\label{decls:types}}
+
+\hypertarget{mb-types}{%
+\subsection{Может быть типы}\label{decls:mb-types}}
+
 
 \hypertarget{functions}{%
 \subsection{Описание функций}\label{decls:functions}}
