--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -1,5 +1,11 @@
 \hypertarget{expressions}{%
 \section{Выражения}\label{expr:chapter}}
 
+\hypertarget{operands}{%
+\subsection{Операнды}\label{expr:operands}}
+
 \hypertarget{operators}{%
 \subsection{Операции}\label{expr:operators}}
+
+\hypertarget{const-expr}{%
+\subsection{Константные выражения}\label{expr:const-expr}}
