--- a/doc/report/8-модули.tex
+++ b/doc/report/8-модули.tex
@@ -1,9 +1,12 @@
 \hypertarget{modules}{%
 \section{Модули}\label{mods:chapter}}
 
+Заголовок модуля не является описанием, имя модуля не принадлежит никакой области действия. Его цель - идентифицировать файлы, принадлежащие одному и тому же модулю.
+
 \hypertarget{import}{%
 \subsection{Импорт}\label{mods:import}}
 
+Ошибка компиляции, если знак экспорта указан для идентификатора, описанного не на уровне модуля.
 
 \hypertarget{entry}{%
 \subsection{Вход}\label{mods:entry}}
