--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -115,7 +115,7 @@
 \end{Grammar} 
 
 Если тип константы не указан, то он устанавливается равным типу выражения (\See{expr:chapter}).
-Выражение для константы должно вычисляться во время компиляции (\See{expr:const-expr}).
+Выражение для константы должно быть константным выражением (\See{expr:const-expr}).
 
 \begin{Trivil}
 конст к1: Цел64 = 1 // тип Цел64
