--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -160,6 +160,28 @@
 \hypertarget{variables}{%
 \subsection{Описание переменных}\label{decls:variables}}
 
+Описание переменной создает переменную, привязывает к ней идентификатор и указывает её тип и начальное значение через \emph{Инициализацию}. 
+
+\begin{Grammar}
+Описание-переменной: 
+    'пусть' Идент-оп (':' Указ-типа)? Инициализация
+Инициализация: (':=' | '=') ('позже' | Выражение)
+\end{Grammar} 
+
+Если тип переменной не указан, то он устанавливается равным типу выражения (\See{expr:chapter}).
+
+Если \emph{Инициализация} задана через лексему '=', то значениe переменной не может быть изменено (\emph{переменная с единственным присваиванием}), 
+если же в инициализации используется лексема ':=', то значение может быть изменено оператором присваивания (\See{stmt:assignment}).
+
+Если в инициализации задано \emph{Выражение}, то начальным значение переменной является значение выражения.
+Вместо выражения в инициализации может быть указано ключевое слово \keyword{позже}, это \emph{поздняя инициализация}. 
+Такая форма инициализации разрешена только для переменных уровня модуля, при этом тип таких переменных, должен быть явно указан.
+
+Значение переменной с поздней инициализацией должно быть задано в инициализации модуля (\See{mods:entry}). 
+Текущая реализация компилятора запрещает позднюю инициализацию для переменных с единственным присваиванием.
+
+Язык \thelang{} не поддерживает неявное задание начального значения переменной.
+
 \hypertarget{types}{%
 \subsection{Описание типов}\label{decls:types}}
 
