--- a/doc/report/6-операторы.tex
+++ b/doc/report/6-операторы.tex
@@ -4,3 +4,6 @@
 \hypertarget{blocks}{%
 \subsection{Блоки}\label{stmt:blocks}}
 
+\hypertarget{assignment}{%
+\subsection{Оператор присваивания}\label{stmt:assignment}}
+
