--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -54,7 +54,7 @@
     ложь истина
 \end{Verbatim}
 
-Литерал nullable (\See{}):
+Литерал nullable (\See{decls:mb-types}):
 \begin{Verbatim}
     пусто
 \end{Verbatim}
@@ -75,12 +75,12 @@
 \begin{tabular}[c]{l|l}
 \textbf{Тип} & \textbf{Множество значений} \\ \hline
 Байт &  множество целых числа от 0 до 255   \\
-Цел64 & множество всех 64-битных знаковых целых \\
-Слово64 & множество всех 64-битных беззнаковых целых \\ 
+Цел64 & множество всех 64-битных знаковых целых чисел \\
+Слово64 & множество всех 64-битных беззнаковых целых чисел  \\ 
 Вещ64 & множество всех 64-разрядных чисел с плавающей запятой стандарта IEEE-754 \\ 
 Лог & константы \verb|ложь| и \verb|истина| \\ 
 Символ & множество всех Unicode символов \\ 
-Строка & множество всех строковых литералов.
+Строка & множество всех строковых литералов
 \end{tabular}
 
 \bigskip
@@ -170,24 +170,126 @@
 
 Если тип переменной не указан, то он устанавливается равным типу выражения (\See{expr:chapter}).
 
-Если \emph{Инициализация} задана через лексему '=', то значениe переменной не может быть изменено (\emph{переменная с единственным присваиванием}), 
-если же в инициализации используется лексема ':=', то значение может быть изменено оператором присваивания (\See{stmt:assignment}).
+Каждая переменная должна быть явно проинициализирована.
+Если инициализация задана через лексему '=', то значениe переменной не может быть изменено (\emph{переменная с единственным присваиванием}), 
+если же в инициализации используется лексема ':=', то значение может быть изменено (\See{stmt:assignment}, \See{stmt:inc-dec}).
+
+Явное указание типа:
+\begin{Trivil}[vspace=2pt]
+пусть ц1: Цел64 = 1 
+пусть ц2: Цел64 := 2
+\end{Trivil}
+
+Неявное указание типа:
+\begin{Trivil}[vspace=2pt]
+пусть ц3 = 3   // неявное указание типа
+пусть ц4 := 4
+пусть имя = Имя языка() 
+\end{Trivil}
+
+Компилятор выдает ошибку, при попытке изменить значение переменной с единственным присваиванием:
+\begin{SampleErr}[vspace=2pt]
+    ц1 := 2 
+    ц3++
+    имя := "С++"
+\end{SampleErr}
 
 Если в инициализации задано \emph{Выражение}, то начальным значение переменной является значение выражения.
-Вместо выражения в инициализации может быть указано ключевое слово \keyword{позже}, это \emph{поздняя инициализация}. 
+Вместо выражения может быть указано ключевое слово \keyword{позже}, это \emph{поздняя инициализация}. 
 Такая форма инициализации разрешена только для переменных уровня модуля, при этом тип таких переменных, должен быть явно указан.
 
 Значение переменной с поздней инициализацией должно быть задано в инициализации модуля (\See{mods:entry}). 
 Текущая реализация компилятора запрещает позднюю инициализацию для переменных с единственным присваиванием.
 
-Язык \thelang{} не поддерживает неявное задание начального значения переменной.
-
 \hypertarget{types}{%
 \subsection{Описание типов}\label{decls:types}}
 
+Описание типа связывает идентификатор с новым типом, который определяет структуру данных этого типа, и, как следствие, набор операций над данными этого типа.
+
+\begin{Grammar}
+Описание-типа: 'тип' Идент '=' (Тип-вектора | Тип-класса)
+\end{Grammar} 
+
+В текущей версии языка поддерживают два структурных типа: тип вектора (\See{decls:vector-types}) и тип класса (\See{decls:class-types}).
+
+\hypertarget{vector-types}{%
+\subsection{Тип вектора}\label{decls:vector-types}}
+
+Вектор - это пронумерованная последовательность элементов одного типа, называемая типом элемента. Количество элементов называется длиной вектора, длина не может быть отрицательной. Элементы вектора доступны через операцию индексации (\See{expr:indexation}). Для индексации вектора используются целочисленные индексы  от 0 до длина-1. Векторы всегда одномерны, но типом элемента может быть вектор, там самым формируя многомерную структуру.
+
+\begin{Grammar}
+Тип-вектора: '[' ']'  Указ-типа
+\end{Grammar} 
+
+\begin{Trivil}
+тип Байты = []Байт
+тип Матрица = [][]Вещ64
+\end{Trivil}
+
+Длина вектора может изменятся во время выполнения, другими словами, вектор - это \emph{динамический массив}. Для получения текущей длины вектора используется стандартная функция \verb|длина| (\See{stdfuncs:stdlen}).
+Начальное значение для объекта типа вектор задается с помощью конструктора вектора (\See{expr:vector-composite}). Далее, длину вектора можно поменять с помощью стандартных методов (\See{stdfuncs:stdvector}).
+
+Пример инициализации вектора из трех элементов:
+\begin{Trivil}[vspace=2pt]
+пусть байты = Байты[1, 2, 3]
+\end{Trivil}
+
+\hypertarget{class-types}{%
+\subsection{Тип класса}\label{decls:class-types}}
+
+Тип класса - это структура, состоящая из полей. С типом класса могут быть связаны функции, называемые методами (\See{decls:methods}).
+
+Описание класса состоит из опционального указания базового класса и списка полей. 
+Если базовый класс указан, то класс \emph{наследует} поля и методы базового класса (\See{decls:inheritance}).
+
+Для каждого поля в списке задается идентификатор, тип (явно или неявно) и начальное значение.
+Областью действия идентификаторов полей является само описание класса, но они могут быть доступны в операции доступа к полям и методам (\See{expr:selector}).
+
+\begin{Grammar}
+Тип-класса:  'класс' Базовый-класс? '{' список-полей? '}'
+Базовый-класс: '(' Указ-типа ')'
+Список-полей: Поле (Разделитель Поле)*
+Поле: Идент-оп (':' Указ-типа)? Инициализация
+\end{Grammar} 
+
+\begin{Trivil}
+тип Человек = класс {
+    имя: Строка := ""
+    возраст: Цел64 := 0
+}
+\end{Trivil}
+
+Если тип поля не указан, то он устанавливается равным типу выражения (\See{expr:chapter}).
+
+Каждое поле класса должно быть явно проинициализировано.
+Если инициализация задана через лексему '=', то значениe поля не может быть изменено (\emph{поле с единственным присваиванием}), 
+если же в инициализации используется лексема ':=', то значение поля может быть изменено  (\See{stmt:assignment}, \See{stmt:inc-dec}).
+
+Если в инициализации задано \emph{Выражение}, то начальным значение поля является значение выражения.
+Вместо выражения может быть указано ключевое слово \keyword{позже}, это \emph{поздняя инициализация}. 
+Такая форма инициализации разрешена только для полей, тип которых явно указан.
+
+Значение поля с поздней инициализацией должно быть задано при создании экземпляра класса в конструкторе экземпляра класса (\See{expr:class-composite}). 
+
+\hypertarget{exported-fields}{%
+\subsubsection{Экспорт полей}\label{decls:exported-fields}}
+
+Если тип класса экспортируется, его поля могут быть помечены признаком экспорта, такие поля называется \emph{экспортированными полями}.
+Поля, которые не экспортированы, доступны только в том модуле, в котором описан тип класса.
+
+\hypertarget{inheritance}{%
+\subsubsection{Наследование}\label{decls:inheritance}}
+
+
+
+
 \hypertarget{mb-types}{%
-\subsection{Может быть типы}\label{decls:mb-types}}
+\subsection{Может быть тип}\label{decls:mb-types}}
+
 
 
 \hypertarget{functions}{%
 \subsection{Описание функций}\label{decls:functions}}
+
+\hypertarget{methods}{%
+\subsection{Описание методов}\label{decls:methods}}
