--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -4,6 +4,20 @@
 \hypertarget{operands}{%
 \subsection{Операнды}\label{expr:operands}}
 
+\hypertarget{selector}{%
+\subsection{Доступ к полям и методам}\label{expr:selector}}
+
+\hypertarget{indexation}{%
+\subsection{Индексация}\label{expr:indexation}}
+
+
+\hypertarget{vector-composite}{%
+\subsection{Конструктор вектора}\label{expr:vector-composite}}
+
+\hypertarget{class-composite}{%
+\subsection{Конструктор экземпляра класса}\label{expr:class-composite}}
+
+
 \hypertarget{operators}{%
 \subsection{Операции}\label{expr:operators}}
 
