--- a/doc/report/6-операторы.tex
+++ b/doc/report/6-операторы.tex
@@ -7,3 +7,5 @@
 \hypertarget{assignment}{%
 \subsection{Оператор присваивания}\label{stmt:assignment}}
 
+\hypertarget{inc-dec}{%
+\subsection{Инкремент и декремент}\label{stmt:inc-dec}}
