--- a/doc/report/7-стдфунк.tex
+++ b/doc/report/7-стдфунк.tex
@@ -1,6 +1,10 @@
 \hypertarget{stdfuncs}{%
 \section{Стандартные функции}\label{stdfuncs:chapter}}
 
+\hypertarget{stdlen}{%
+\subsection{Длина}\label{stdfuncs:stdlen}}
+
+
 \hypertarget{stdvector}{%
 \subsection{Встроенные методы для векторов}\label{stdfuncs:stdvector}}
 
